# newbrush

./: BuildSystem.Depends  CMakeLists.txt  UIT framework.xlsm  build_android.bat  build_linux64.sh  build_msvc14.bat  build_msvc16.bat  build_qnx-aarch64.sh  newbrush.xlsm  qnx.cmake  readme.txt  run.sh  test.nbb  说明.txt
examples/: CMakeLists.txt  Encoding.cpp  Encoding.h  New Example.bat  TestBase.h  readme.txt
examples/hbstest/: ButtonTestPage.cpp  ButtonTestPage.h  CMakeLists.txt  ColorAnimationTestPage.cpp  ColorAnimationTestPage.h  PointAnimationTestPage.cpp  PointAnimationTestPage.h  ScrollCtrlerTestPage.cpp  ScrollCtrlerTestPage.h  SliderTestPage.cpp  SliderTestPage.h  StackPanelTestPage.cpp  StackPanelTestPage.h  TestApplication.cpp  WrapPanelTestPage.cpp  WrapPanelTestPage.h  main.cpp
examples/hptest/: AnimationPage.cpp  AnimationPage.h  AnimationTest.cpp  AnimationTest.h  CMakeLists.txt  CommonPage.cpp  CommonPage.h  CommonTest.cpp  CommonTest.h  ControlTemplateTestPage.cpp  ControlTemplateTestPage.h  FarCallTest.cpp  FarCallTest.h  GridPage.cpp  GridPage.h  GridTest.cpp  GridTest.h  ListItem.cpp  ListItem.h  ListPage.cpp  ListPage.h  ScrollViewerPage.cpp  ScrollViewerPage.h  TestApplication.cpp  UseControlTestPage.cpp  UseControlTestPage.h  VideoPage.cpp  VideoPage.h  main.cpp
examples/newbrush-player/: BuildProgramCommand.h  CMakeLists.txt  Command.cpp  Command.h  NodeStub.cpp  NodeStub.h  ResourceDictionaryStub.h  ShaderServerStub.cpp  ShaderServerStub.h  ShaderStub.cpp  ShaderStub.h  StubBase.cpp  StubBase.h  StudioCommunicationHelper.cpp  StudioCommunicationHelper.h  main.cpp
examples/newbrush-tests/: A08.cpp  AM8.cpp  Assassin.cpp  BMW.cpp  Bugatti.cpp  CMakeLists.txt  ConfigScene.cpp  ConfigScene.h  ModelPlayer.cpp  MyScene.cpp  MyScene.h  Nanosuit.cpp  TestAnimation.cpp  TestApp.cpp  TestApp.h  TestBinding.cpp  TestBinding.h  TestBitmap.cpp  TestBitmap.h  TestBrush.cpp  TestBrush.h  TestButton.cpp  TestButton.h  TestCanvas.cpp  TestCanvas.h  TestColor.cpp  TestControlTemplate.cpp  TestDateTime.cpp  TestDef.cpp  TestDependencyProperty.cpp  TestDependencyProperty.h  TestDockPanel.cpp  TestDockPanel.h  TestEasingFunction.cpp  TestEllipse.cpp  TestEllipse.h  TestEnumFlags.cpp  TestEvent.cpp  TestFont.cpp  TestFont.h  (+62 more)
examples/szftest/: AnimationTestPage.cpp  AnimationTestPage.h  CMakeLists.txt  TestApplication.cpp  TestApplication.h  main.cpp
examples/test-core/: CMakeLists.txt  TestAny.cpp  TestAny.h  TestChar.cpp  TestColor.cpp  TestColor.h  TestDate.h  TestDateTime.cpp  TestDateTime.h  TestDependencyProperty.cpp  TestDependencyProperty.h  TestEasingFunction.cpp  TestEasingFunction.h  TestEnumFlags.cpp  TestEnumFlags.h  TestEvent.cpp  TestEvent.h  TestException.cpp  TestException.h  TestGlobal.h  TestMatrix.cpp  TestMatrix.h  TestNoneCopyable.cpp  TestNoneCopyable.h  TestPlatform.cpp  TestPoint.cpp  TestPoint.h  TestPoint3DI.cpp  TestPointI.h  TestProperty.cpp  TestProperty.h  TestRandom.cpp  TestRandom.h  TestRect.cpp  TestRect.h  TestRectI.cpp  TestRoutedEvent.cpp  TestRoutedEvent.h  TestSize.cpp  TestSize.h  (+20 more)
examples/test-gles/: CMakeLists.txt  TestApplication.cpp  TestApplication.h  TestConfigure.cpp  TestConfigure.h  TestEgl.cpp  TestEgl.h  TestModel.cpp  TestModel.h  TestSoureDecoder.cpp  TestSoureDecoder.h  TestTexture2D.cpp  TestTexture2D.h  TestWindow.cpp  TestWindow.h  main.cpp
examples/test-gui/: CMakeLists.txt  TestApp.cpp  TestApp.h  TestBinding.cpp  TestBinding.h  TestBrush.cpp  TestBrush.h  TestButton.cpp  TestButton.h  TestCanvas.cpp  TestCanvas.h  TestDockPanel.cpp  TestDockPanel.h  TestEasingFunction.cpp  TestEllipse.cpp  TestEllipse.h  TestGrid.cpp  TestGrid.h  TestLine.cpp  TestLine.h  TestPageBase.cpp  TestPageBase.h  TestPolygon.cpp  TestPolygon.h  TestPolyline.cpp  TestPolyline.h  TestProperty.cpp  TestProperty.h  TestPropertyAnimation.cpp  TestPropertyAnimation.h  TestPropertyAnimationUsingKeyFrames.cpp  TestPropertyAnimationUsingKeyFrames.h  TestRectangle.cpp  TestRectanglePage.h  TestShape.cpp  TestShape.h  TestStackPanel.cpp  TestStackPanel.h  TestStoryboard.cpp  TestStoryboard.h  (+13 more)
examples/test-media/: CMakeLists.txt  TestBase.h  TestBitmap.cpp  TestBitmap.h  TestExifReader.cpp  TestExifReader.h  TestFamilyTypeface.cpp  TestFamilyTypeface.h  TestFont.cpp  TestFont.h  TestGifReader.cpp  TestGifReader.h  TestImagePool.cpp  TestImagePool.h  TestTiffReader.cpp  TestTiffReader.h  TestTimeline.cpp  TestTimeline.h  main.cpp
examples/test-system/: CMakeLists.txt  TestColor.h  TestDate.cpp  TestDateTime.cpp  TestGlobal.cpp  TestPoint3D.cpp  TestPointI.cpp  TestRandom.cpp  TestRect.h  TestRectI.h  TestStream.h  TestThicknese.cpp  TestThicknese.h  TestThread.cpp  TestThread.h  TestTime.h  TestTimeSpan.cpp  main.cpp
examples/testapp/: CMakeLists.txt  HPTest.cpp  HPTest.h  Makefile  TestApplication.cpp  TestApplication.h  TestPage.cpp  TestPage.h  Testaaa.cpp  Testaaa.h  main.cpp  resource.h
examples/testgles/: CMakeLists.txt  TestApplication.cpp  TestApplication.h  TestEgl.cpp  TestModel.cpp  TestTexture2D.cpp  TestTexture2D.h  TestWindow.cpp  TestWindow.h  main.cpp
examples/testgui/: CMakeLists.txt  TestApp.cpp  TestApp.h  TestPageBase.cpp  TestPageBase.h  TestRectangle.cpp  TestRectanglePage.h  TestWindow.cpp  TestWindow.h  main.cpp
examples/testmath/: CMakeLists.txt  TestMatrix.cpp  TestVec.cpp  TestVecB.cpp  TestVecI.cpp  main.cpp
examples/testmedia/: CMakeLists.txt  TestBitmap.cpp  TestBitmap.h  TestExifReader.cpp  TestExifReader.h  TestGifReader.cpp  TestGifReader.h  TestImagePool.cpp  TestImagePool.h  TestTiffReader.cpp  TestTiffReader.h  main.cpp
examples/testnetwork_c/: CMakeLists.txt  TestIpcClient.cpp  TestIpcClient.h  TestSession.h  main.cpp
examples/testnetwork_s/: CMakeLists.txt  TestIpcServer.cpp  TestIpcServer.h  (+3 more)
include/: CMakeLists.txt  readme.txt
libnb/: CMakeLists.txt
projects/: CMakeLists.txt  Common.cpp  Common.h  readme.txt
unittests/: CMakeLists.txt  Data.h  Test-PRT.cpp  TestAnimation.cpp  TestBinding.cpp  TestControls.cpp  TestMesh.cpp  TestMisc.cpp  TestTypes.cpp  Tr.h  TrTable.h  main.cpp
(+1868 files in other folders)
