# 1. Project Name

project(examples)

# 2. Platform Env (Include/Lib Path, C/CXX/LD FLAGS)

# 3. Sub Projects

add_subdirectory(testsystem)
add_subdirectory(testmath)
add_subdirectory(testmedia)
add_subdirectory(testnetwork_c)
add_subdirectory(testnetwork_s)
add_subdirectory(testgles)
add_subdirectory(testgui)
#add_subdirectory(hptest)
#add_subdirectory(szftest)
#add_subdirectory(hbstest)


# 5. Project Install

# N/A
